# octelly-shell-utils

./: .gitignore  README.md  flake.nix  pyproject.toml
octelly_shell_utils/: __init__.py  packwiz.py
octelly_shell_utils/utils/: __init__.py  packwiz.py
